--- a/FoodDeliveryFrontEnd/package.json
+++ b/FoodDeliveryFrontEnd/package.json
@@ -79,6 +79,7 @@
     "posthtml-parser": "^0.10.2",
     "posthtml-render": "^3.0.0",
     "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-error-overlay": "^6.0.9",
     "react-refresh": "^0.9.0",
     "react-router-dom": "^6.23.1",
