--- a/FoodDeliveryAdmin/package.json
+++ b/FoodDeliveryAdmin/package.json
@@ -1,9 +1,11 @@
 {
   "devDependencies": {
+    "buffer": "^6.0.3",
     "parcel": "^2.12.0",
     "process": "^0.11.10"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
